# MediaPlayer

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  videoitem.cpp  videoitem.h
CustomQMLComponents/: CustomButton.qml
Gstreamer/: gstreamervideocapture.cpp  gstreamervideocapture.h
Screens/BottomScreen/: BottomStartUpScreen.qml
Screens/LeftScreen/: LeftStartUpScreen.qml
Screens/MainScreen/: MainScreen.qml
Screens/RightScreen/: RightStartUpScreen.qml
Screens/TopScreen/: TopStartUpScreen.qml
StreamControl/VideoControl/: videocontrol.cpp  videocontrol.h
Utils/: utils.cpp
icons/: icons.qrc
include/: utils.h
include/gstreamer/: gstreamervideocapture.h  gstreamervideowriter.h
include/model/: recordmodel.h
include/streamcontrol/videocontrol/: videocontrol.h
include/streamcontrol/videocontrol/util/: util.h
include/ui/: videoitem.h
resource/: qml.qrc
resource/qml/: Main.qml
resource/qml/customqmlcomponents/: CustomButton.qml
resource/qml/model/: VideoRecordsView.qml
resource/qml/screens/bottomscreen/: BottomStartUpScreen.qml
resource/qml/screens/leftscreen/: LeftStartUpScreen.qml
resource/qml/screens/mainscreen/: MainScreen.qml
resource/qml/screens/rightscreen/: RightStartUpScreen.qml
resource/qml/screens/topscreen/: TopStartUpScreen.qml
src/: main.cpp  utils.cpp
src/gstreamer/: gstreamervideocapture.cpp  gstreamervideowriter.cpp
src/model/: recordmodel.cpp
src/qml/: videoitem.cpp
src/streamcontrol/videocontrol/: videocontrol.cpp
src/ui/: videoitem.cpp
